force-app/main/default/objects/INTGR_Case_Comment__c/INTGR_Case_Comment__c.object-meta.xml
<CustomObject>
    <description>!!! INTEGRATION OBJECT- DO NOT ALTER !!!
NICC-032393</description>
    <label>Integration Case Comment</label>
    <nameField>
        <displayFormat>INTGRC-{0000000}</displayFormat>
        <label>Integration Case Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Case Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>