force-app/main/default/objects/INTGR_Case_Comment__c/fields/CommentBody__c.field-meta.xml
<CustomField>
    <fullName>CommentBody__c</fullName>
    <description>NICC-030216 - Value set by integration user and integration code for two-way (inbound/outbound) updating of Case Comment body.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value set by integration user and integration code for two-way (inbound/outbound) updating of Case Comment body.</inlineHelpText>
    <label>Body</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>