force-app/main/default/objects/INTGR_Case_Comment__c/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <description>NICC-030216 - Value set by integration user and integration code for two-way (inbound/outbound) updating of Case Comment date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value set by integration user and integration code for two-way (inbound/outbound) updating of Case Comment date.</inlineHelpText>
    <label>Comment Date</label>
    <type>DateTime</type>
</CustomField>