force-app/main/default/objects/INTGR_Case_Comment__c/fields/Customer_Ticket_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ticket_System_Id__c</fullName>
    <description>NICC-030216 - Formula reference to primary key (system id) set on the related integration case/incident record in customer ITSM.</description>
    <formula>INTGR_Case__r.Customer_Ticket_System_Id__c</formula>
    <inlineHelpText>Formula reference to primary key (system id) set on the related integration case/incident record in customer ITSM.</inlineHelpText>
    <label>Customer Ticket System Id</label>
    <type>Text</type>
</CustomField>