force-app/main/default/objects/INTGR_Case_Comment__c/fields/Integration_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Account_Id__c</fullName>
    <description>NICC-030216 - Formula field to add reference to INTGR_Account__c lookup field on related integration case.</description>
    <formula>INTGR_Case__r.INTGR_Account__c</formula>
    <inlineHelpText>Formula field to add reference to INTGR_Account__c lookup field on related integration case.</inlineHelpText>
    <label>Integration Account Id</label>
    <type>Text</type>
</CustomField>