force-app/main/default/objects/INTGR_Case_Comment__c/fields/INTGR_Case__c.field-meta.xml
<CustomField>
    <fullName>INTGR_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-030216 - Lookup to parent integration case</description>
    <inlineHelpText>Lookup to parent integration case</inlineHelpText>
    <label>Case</label>
    <referenceTo>INTGR_Case__c</referenceTo>
    <relationshipLabel>Integration Case Comments</relationshipLabel>
    <relationshipName>Integration_Case_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>