force-app/main/default/objects/INTGR_Case_Comment__c/validationRules/API_User_Cant_Update_Closed_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>API_User_Cant_Update_Closed_Case</fullName>
    <active>true</active>
    <description>NICC-032393</description>
    <errorConditionFormula>AND( 
	CONTAINS ($Profile.Name, &quot;Case Integration Customers&quot;), 
	$User.IsActive, 
	INTGR_Case__r.Case__r.INTGR_ClosedBy__c &lt;&gt; &quot;PB&quot;,
	OR( 
	ISPICKVAL( INTGR_Case__r.Status__c, &quot;Closed as recovered&quot;), 
	ISPICKVAL( INTGR_Case__r.Status__c, &quot;Closed as rejected&quot;), 
	ISPICKVAL( INTGR_Case__r.Status__c, &quot;Closed as withdrawn&quot;) 
	) 
)</errorConditionFormula>
    <errorMessage>API user can not add comments to closed case.</errorMessage>
</ValidationRule>